fixed styling to heading to fix white space

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,11 +33,16 @@ input {
 
 img {
   display: block;
+  width: 7em;
+  border: 1px black solid;
 }
 
-.Shop {
+.ShopContainer {
   position: relative;
-  bottom: 4em;
+}
+.Shop {
+  position: absolute;
+  bottom: 2em;
 }
 
 .flip-horizontal {
